# ChatShop

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: .env.example  gradio_main.py  main.py  pyproject.toml  vector_index.json  vercel.json
backend/src/chatshop/: CLAUDE.md  __init__.py  config.py  runtime.py
backend/src/chatshop/agent/: agent_loop.py  conversationist.py  curator.py  evaluator.py  planner.py
backend/src/chatshop/api/: sse_events.py
backend/src/chatshop/data/: cleaner.py  loader.py  models.py
backend/src/chatshop/embeddings/: embedder.py
backend/src/chatshop/infra/: observability.py
backend/src/chatshop/rag/: prompt.py  retriever.py
backend/src/chatshop/scripts/: ingest.py  inspect_chroma.py
backend/src/chatshop/ui/: gradio_app.py
backend/src/chatshop/vectorstore/: chroma.py  numpy_store.py
backend/tests/: test_agent_loop.py  test_api.py  test_embedder.py
backend/tests/evals/: golden_dataset.py  report.py
backend/tests/evals/.cache/: clarify_01_9ff427d7.json  clarify_01_c071dc6f.json  clarify_01_f032b800.json  clarify_02_9ff427d7.json  clarify_02_c071dc6f.json  clarify_02_f032b800.json  clarify_03_9ff427d7.json  clarify_03_c071dc6f.json  clarify_03_f032b800.json  clarify_04_9ff427d7.json  clarify_04_c071dc6f.json  clarify_04_f032b800.json  clarify_05_9ff427d7.json  clarify_05_c071dc6f.json  clarify_05_f032b800.json  edge_01_9ff427d7.json  edge_01_c071dc6f.json  edge_01_f032b800.json  edge_02_9ff427d7.json  edge_02_c071dc6f.json  edge_02_f032b800.json  edge_03_9ff427d7.json  edge_03_c071dc6f.json  edge_03_f032b800.json  info_01_9ff427d7.json  info_01_c071dc6f.json  info_01_f032b800.json  info_02_9ff427d7.json  info_02_c071dc6f.json  info_02_f032b800.json  info_03_9ff427d7.json  info_03_c071dc6f.json  info_03_f032b800.json  multi_01_9ff427d7.json  multi_01_c071dc6f.json  multi_01_f032b800.json  multi_02_9ff427d7.json  multi_02_c071dc6f.json  multi_02_f032b800.json  multi_03_9ff427d7.json  (+35 more)
(+69 files in other folders)
