[project]
name = "chatshop"
version = "0.1.0"
description = "Conversational shopping assistant with RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40",
    "chromadb>=0.5",
    "gradio>=4.0",
    "sentence-transformers>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.10.8",
    "datasets>=2.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.1.8",
    "langfuse>=2.0,<3.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0", "ipykernel>=6.0", "notebook>=7.0"]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
lint = ["ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatshop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
